Enable checkstyle for integration-tests
Signed-off-by: Moti Asayag <masayag@redhat.com>